--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.testing:testing7.4.0'
+    implementation 'org.testng:testng:7.4.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
-    testImplementation 'org.testng:testng:7.1.0'
 }
 
 test {
